Fixed bug in new menu: menu icons aligned by center

--- a/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
+++ b/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
@@ -4848,6 +4848,7 @@ tags-input .tags .tag-item {
         position: relative;
         top: 2px;
         width: 32px;
+        text-align: center;
     }
 
     .nav-bar .bar .menu-count {
